fixed couters for message

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -164,7 +164,7 @@
 </main>
 {% block pagination %}{% endblock %}
 <footer>
-  <p>Copyright {{ year }} FreeStuff</p>
+  <p>© {{ year }} FreeStuff</p>
 </footer>
 
 
