--- a/app/templates/mail/user_question_recieved.html
+++ b/app/templates/mail/user_question_recieved.html
@@ -1,7 +1,7 @@
 <h4>Hi, {{ giver.username }}</h4>
 
-<p>An user {{ current_user.username }} has quesion about {{ item.title }}.</p>
-<p>You can reply by clicking below link.</p>
+<p>An user <strong>{{ current_user.username }} </strong>has quesion about "{{ item.title }}".</p>
+<p>Please find it by clicking below link.</p>
 <p><a href="{{ link }}">{{ item.title }}</a></p>
 <br>
 <h4>Happy day!</h4>
