--- a/app/templates/mail/user_welcome.html
+++ b/app/templates/mail/user_welcome.html
@@ -3,6 +3,6 @@
 <p>Give away your unnecessary things to someone who need them!</p>
 <p>Less is better!</p>
 
-<a href="{{ link }}">Browse FreeStuff</a>
+<p><a href="{{ link }}">Browse FreeStuff</a></p>
 
 <h4>From FreeStuff Admin Team</h4>
