--- a/app/templates/main/messages.html
+++ b/app/templates/main/messages.html
@@ -9,7 +9,7 @@
 <div class="entire-message-div">
 
 <div class="message-received-div">
-<h1>Message Received.</h1>
+<h1>Question Received.</h1>
 {% if current_user.question_received > 0 %}
     {% for p in posts %}
         {% for m in messages|sort(reverse=True, attribute='timestamp') %}
@@ -25,13 +25,13 @@
     {% endfor %}
 
 {% else %}
-<p>There is no message received.</p>
+<p>There is no question received.</p>
 {% endif %}
 </div>
 
 <div class="answer-received-div">
 <h1>Answers Received.</h1>
-{% if current_user.question_answered > 0  and posts %}
+{% if current_user.question_answered > 0 %}
 
 {% for q in posted_questions|sort(reverse=True, attribute='timestamp')  %}
 
