confirmation html revised

--- a/app/templates/mail/confirm.html
+++ b/app/templates/mail/confirm.html
@@ -2,6 +2,6 @@
 <h3>Hello, {{user.username}}!</h3>
 <p>Please click below link to confirm your email address. Thank you.</p>
 
-<p>Here is the link <a href="{{ link }}">{{ link }}</a></p>
+<p>Here is the <a href="{{ link }}">link.</a></p>
 
 <h3>From FreeStuff Admin Team</h3>
